force-app/main/default/objects/IntegrationSettings_CRMToAP__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Integration settings between Salesforce and AgentPortal</description>
    <fields>
        <fullName>Base_Url__c</fullName>
        <label>Base Url</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Mock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Mock ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Header_ClientId__c</fullName>
        <label>Header ClientId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_ClientSecret__c</fullName>
        <label>Header ClientSecret</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_ContentType__c</fullName>
        <label>Header ContentType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <description>POST or GET</description>
        <label>Method</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mock_Endpoint_Message__c</fullName>
        <label>Mock Endpoint Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <label>Path</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <label>Timeout</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>IntegrationSettings_CRMToAP</label>
</CustomObject>